[tool.poetry]
name = "deepteam"
version = "1.0.6"
description = "The LLM Red Teaming Framework"
authors = ["Jeffrey Ip <jeffreyip@confident-ai.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "deepteam"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
aiohttp = ">=3.11.18"
deepeval = ">=3.6.2"
grpcio = ">=1.67.1"
openai = ">=1.76.2"
pyyaml = ">=6.0.2"
requests = ">=2.31.0"
tabulate = ">=0.9.0"
tqdm = ">=4.66.1"
agent-action-guard = {version = ">=1.0.1,<2.0.0", optional = true, extras = ["harmacteval"]}

# Optional extras:
# - The "harmacteval" extra enables evaluation features backed by `agent-action-guard`.
# - Installing this extra may pull in heavyweight ML dependencies such as `torch`
#   (and, on some Linux/x86_64 platforms, large CUDA runtime wheels).
# Be aware of this footprint before installing via `pip install deepteam[harmacteval]`.
[tool.poetry.extras]
harmacteval = ["agent-action-guard"]

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"
pytest-asyncio = ">=0.24.0"
pytest = ">=8.3.0"
datasets = "*"

[tool.poetry.group.build.dependencies]
build = ">=1.0.3"
twine = ">=6.1.0"

[tool.poetry.scripts]
deepteam = "deepteam.cli.main:app"

[tool.poetry.urls]
Repository = "https://github.com/confident-ai/deepteam"
Documentation = "https://trydeepteam.com"
Issues = "https://github.com/confident-ai/deepteam/issues"

[tool.black]
line-length = 80

[tool.pytest.ini_options]
addopts = "-m 'not skip_test'"
markers = [
    "skip_test: skip the test",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
